set the gallery back to initial view on main menu click as well as slider dot click. also corrected the issues on edge for the horizontal scrolls on images

--- a/css/styles-3.css
+++ b/css/styles-3.css
@@ -485,6 +485,9 @@ address{
 .img-gallery .close-gal{
     display: none;
 }
+.img-gallery .relative-div{
+    overflow-x: hidden;
+}
 .img-gallery .relative-div:after {
     content: " ";
     display: block;
